# obstacle_avoidance

./: README.md  USAGE.md
camera_calibration/: CMakeLists.txt  package.xml
camera_calibration/config/: icp_calibration_params.yaml
camera_calibration/launch/: icp_calibration.launch.py
camera_calibration/src/: icp_calibration_node.cpp
obstacle_avoidance/: CMakeLists.txt  README.md  USAGE.md  package.xml
obstacle_avoidance/config/: apf_controller_params.yaml  fusion_params.yaml  icp_calibration_params.yaml  mpc_controller_params.yaml  obstacle_detection_params.yaml
obstacle_avoidance/launch/: apf_controller.launch.py  full_pipeline.launch.py  icp_calibration.launch.py  mpc_controller.launch.py  obstacle_detection.launch.py  pointcloud_fusion.launch.py
obstacle_avoidance/msg/: EllipseObstacleArray.msg  TransformMatrix.msg
obstacle_avoidance/scripts/: ICP使用速查表.txt  icp_transform_listener.py
obstacle_avoidance/src/: apf_controller_node.cpp  icp_calibration_node.cpp  mpc_controller_node.cpp  obstacle_detection_node.cpp  pointcloud_fusion_node.cpp
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/config/: display.rviz
robot_simulation/launch/: display_rviz.launch.py  simulate_gazebo.launch.py
robot_simulation/urdf/: base.urdf.xacro  ubot.urdf.xacro
robot_simulation/urdf/actuator/: caster.urdf.xacro  caster_general.urdf.xacro  connecting_rod.urdf.xacro  cylinder_base.urdf.xacro  wheel.urdf.xacro
robot_simulation/urdf/plugins/: gazebo_sensor_plugin.xacro
robot_simulation/urdf/sensor/: camera.urdf.xacro  depth_camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
robot_simulation/world/: room.world  room_simple.world
unitree_navigation/: CMakeLists.txt  package.xml
unitree_navigation/config/: nav2_params.yaml
unitree_navigation/launch/: navigation2.launch.py
unitree_navigation/maps/: room.pgm  room.yaml
unitree_obstacle_avoidance/: .gitignore  CMakeLists.txt  ELLIPSE_OBSTACLE_USAGE.md  FRAME_ALIGNMENT_FIX.md  FUSION_PLANE_FIX.md  GROUND_PROJECTION_GUIDE.md  MARKER_PLANE_FIX.md  MPC_CONTROLLER_GUIDE.md  MPC_LOCAL_PLANNER_FIX.md  OBSTACLE_DETECTION_FIXES.md  POINTCLOUD_TRANSFORM_GUIDE.md  PROJECTION_CHANGES.md  QUICK_FIX_GUIDE.md  QUICK_FUSION_FIX.md  QUICK_PLANE_FIX.md  package.xml
unitree_obstacle_avoidance/config/: fusion_params.yaml
unitree_obstacle_avoidance/launch/: full_pipeline.launch.py  mpc_controller.launch.py  obstacle_detection.launch.py  pointcloud_fusion.launch.py
unitree_obstacle_avoidance/msg/: EllipseObstacle.msg
unitree_obstacle_avoidance/scripts/: README_TEST.md  calibrate_transform.py  diagnose_frame_alignment.py  diagnose_transform.py  test_obstacle_params.py  test_velocity_publisher.py
unitree_obstacle_avoidance/src/: mpc_controller_node.cpp  obstacle_detection_node.cpp  pointcloud_fusion_node.cpp
unitree_robot/: CMakeLists.txt  package.xml
unitree_robot/launch/: display_rviz.launch.py  simulate_gazebo.launch.py
unitree_robot/urdf/: base.urdf.xacro  ubot.urdf.xacro
unitree_robot/urdf/actuator/: caster.urdf.xacro  caster_general.urdf.xacro
unitree_robot/urdf/sensor/: camera.urdf.xacro  laser.urdf.xacro
unitree_robot/world/: obstacle.world
video_client/: CMakeLists.txt  QUICKSTART.md  README.md  STRUCTURE.md  package.xml  使用说明.txt  包功能摘要.md  快速命令.sh  项目完成报告.md
video_client/config/: network_params.yaml
video_client/launch/: network_receiver.launch.py
video_client/src/: network_receiver_node.cpp
video_client/test_server/: video_pointcloud_server.py
