<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>video_client</name>
  <version>0.1.0</version>
  <description>ROS2 package for receiving H.264 video and PCD point cloud data over network</description>
  <maintainer email="zjq@example.com">zjq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- PCL dependencies -->
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- OpenCV for video -->
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

